[package]
name = "anthropic"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mariogeiger/anthropic"

[features]
default = []
# Opt-in response-side helpers (`from_str`, `from_status`, `usage_fields`).
# Kept off by default to preserve §6 ("bindings only — no response parser").
response-helpers = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
